<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        />

    <EditText
        android:id="@+id/etAuthor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_author"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
        />

    <EditText
        android:id="@+id/etPublisher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_publisher"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
       />

    <EditText
        android:id="@+id/etIsbn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_isbn"
        android:inputType="textPersonName"
        android:layout_margin="@dimen/search_margin"
       />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:background="@drawable/search_btn"
        android:text="@string/search" />
</LinearLayout>